--- a/lyrics.html
+++ b/lyrics.html
@@ -5,6 +5,9 @@
             <title>My song lyrics</title>
             <h1>THe Story</h1>
             <h4>Thirty Seconds to Mars</h4>
+            <a href="https://www.youtube.com/watch?v=DkZRA_apgSc">
+                orginial video 
+            </a>
             <hr>
             <br>
 
