--- a/lyrics.html
+++ b/lyrics.html
@@ -3,8 +3,8 @@
     <head>
         <body>
             <title>My song lyrics</title>
-            <h1>THe Story</h1>
-            <h4>Thirty Seconds to Mars</h4>
+            <h1><strong>The Story</strong></h1>
+            <h4><em>Thirty Seconds to Mars</em></h4>
             <a href="https://www.youtube.com/watch?v=DkZRA_apgSc">
                 orginial video 
             </a>
